# qmckl_sycl

./: Makefile  Makefile.am  Makefile.in  README.md  Takefile  a.out  aclocal.m4  build.sh  config.status  configure  configure.ac  essai  libqmckl_gpu.la  libtool  output.txt  qmckl_gpu  qmckl_sycl.code-workspace  result  test  test.cpp
.libs/: libqmckl_gpu.la  libqmckl_gpu.lai  libqmckl_gpu.so.0.0.0
_INSTALL/lib/: libqmckl_gpu.la  libqmckl_gpu.so.0  libqmckl_gpu.so.0.0.0
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: qmckl_ao.hpp  qmckl_basic_functions.hpp  qmckl_blas.hpp  qmckl_context.hpp  qmckl_context_sycl.h  qmckl_distance.hpp  qmckl_electron.hpp  qmckl_gpu.hpp  qmckl_jastrow.hpp  qmckl_memory.hpp  qmckl_memory_sycl.h  qmckl_mo.hpp  qmckl_nucleus.hpp  qmckl_point.hpp  qmckl_trexio.hpp  qmckl_types.hpp
src/: Makefile  a.out  qmckl_ao.cpp  qmckl_ao.lo  qmckl_ao_sycl.cpp  qmckl_ao_sycl.lo  qmckl_basic_functions.cpp  qmckl_basic_functions.lo  qmckl_blas.cpp  qmckl_blas.lo  qmckl_context.cpp  qmckl_context.lo  qmckl_distance.cpp  qmckl_electron.cpp  qmckl_electron.lo  qmckl_jastrow copy.cpp  qmckl_jastrow.cpp  qmckl_jastrow.lo  qmckl_jastrow_sycl.cpp  qmckl_memory.cpp  qmckl_memory.lo  qmckl_memory_acc_sycl.cpp  qmckl_memory_omp.cpp  qmckl_memory_omp_sycl.cpp  qmckl_memory_sycl.cpp  qmckl_mo.cpp  qmckl_mo.lo  qmckl_mo_sycl.cpp  qmckl_nucleus.cpp  qmckl_nucleus.lo  qmckl_point.cpp  qmckl_point.lo  qmckl_test.cpp  qmckl_test.cppppp  qmckl_trexio.cpp  qmckl_trexio.lo  qmckl_types_test.cpp  test  test.cpp  test.cpppp  (+1 more)
src/.deps/: qmckl_ao.Plo  qmckl_ao.Po  qmckl_ao_sycl.Plo  qmckl_ao_sycl.Po  qmckl_basic_functions.Plo  qmckl_basic_functions.Po  qmckl_blas.Plo  qmckl_blas.Po  qmckl_context.Plo  qmckl_context.Po  qmckl_electron.Plo  qmckl_electron.Po  qmckl_jastrow.Plo  qmckl_jastrow.Po  qmckl_jastrow_sycl.Po  qmckl_memory.Plo  qmckl_memory.Po  qmckl_mo.Plo  qmckl_mo.Po  qmckl_mo_sycl.Plo  qmckl_mo_sycl.Po  qmckl_nucleus.Plo  qmckl_nucleus.Po  qmckl_point.Plo  qmckl_point.Po  qmckl_trexio.Plo  qmckl_trexio.Po
tests/: save  test_qmckl_ao  test_qmckl_ao.cpp  test_qmckl_jastrow  test_qmckl_jastrow.cpp  test_qmckl_jastrow_tests.cpp  test_qmckl_mo  test_qmckl_mo.cpp
tests/.deps/: test_qmckl_ao.Po  test_qmckl_jastrow.Po  test_qmckl_jastrow.Tpo  test_qmckl_mo.Po
tests/.libs/: lt-test_qmckl_ao  lt-test_qmckl_jastrow  lt-test_qmckl_mo  test_qmckl_ao  test_qmckl_jastrow  test_qmckl_mo
toDelele/: output  try.cpp
